src/test/deca/context/invalid/decl_var_03_so.deca
// Description:
//    Teste la déclaration de variable sans indiquer de nom de variable.
//
// Resultats:
//    Ligne 12: L'identificateur de variable int n'est pas défini.
//
// Historique:
//    cree le 13/01/2023

{
// Doit être refusé.
int  = 5;
}